# api/app/Http/Controllers/QuizController.php
@@ -19,6 +19,45 @@ class QuizController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *     path="/quiz",
+     *     summary="Récupère un quiz spécifique ou tous les quiz",
+     *     @OA\Response(response="200", description="Récupération réussie"),
+     *     @OA\Response(response="404", description="Le quiz demandé n'a pas été trouvé"),
+     *     @OA\RequestBody(
+     *       required=false,
+     *       @OA\JsonContent(
+     *         required={"name"},
+     *         @OA\Property(property="name", type="string", description="Le nom du quiz à récupérer"),
+     *       ),
+     *     )
+     * )
+     */
+    public function getQuiz(Request $request)
+    {
+        $quiz_name = $request->input('name');
+
+        if ($quiz_name) {
+            $quiz = Quiz::where('qcmName', $quiz_name)->first();
+
+            if ($quiz) {
+                return response()->json(['quiz' => $quiz], 200);
+            } else {
+                return response()->json(['message' => 'Le quiz demandé n\'a pas été trouvé'], 404);
+            }
+        } else {
+            $quizzes = Quiz::all();
+
+            if ($quizzes->isEmpty()) {
+                return response()->json(['message' => 'Aucun quiz n\'a été trouvé'], 404);
+            } else {
+                return response()->json(['quizzes' => $quizzes], 200);
+            }
+        }
+    }
+
+
+    /**
      * @OA\Post(
      *     path="/quiz",
      *     summary="Crée un quiz",
@@ -91,7 +130,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/correct",
+     *     path="/quiz/correct",
      *     summary="Lancer la correction des quiz",
      *     tags={"corrections"},
      *     @OA\Response(response="200", description="Quiz corrigé"),
@@ -149,7 +188,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/omr_errors_resolved",
+     *     path="/quiz/omr_errors_resolved",
      *     summary="Résoudre les erreurs de l'omr",
      *     tags={"corrections"},
      *     @OA\Response(response="200", description="Execution du script OMR errors réussie sur le quizz"),
@@ -178,7 +217,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/upload_copies",
+     *     path="/quiz/upload_copies",
      *     summary="Upload les copies",
      *     tags={"corrections"},
      *     @OA\Response(response="200", description="Fichier de correction uploadé avec succès"),
@@ -233,7 +272,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/upload_correction",
+     *     path="/quiz/upload_correction",
      *     summary="Upload la correction du quiz",
      *     tags={"corrections"},
      *     summary="Upload de la correction du quiz",
@@ -321,7 +360,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/upload_list",
+     *     path="/quiz/upload_list",
      *     tags={"lists"},
      *     summary="Upload de la liste des élèves du quiz",
      *     operationId="uploadList",
@@ -394,7 +433,7 @@ class QuizController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/check_correction",
+     *     path="/quiz/check_correction",
      *     summary="Vérifier les corrections",
      *     @OA\Response(response="200", description="Liste des quiz"),
      *     @OA\Response(response="500", description="Erreur lors de la récupération de la liste des quiz"),
